plugins {
    id 'com.android.application'
    id 'com.huawei.agconnect'
    id 'com.google.gms.google-services'
}



android {
    compileSdk 31

    defaultConfig {
        applicationId "com.example.foody"
        minSdk 28
        targetSdk 31
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            packagingOptions  {
                // If the CPU architecture is ARMv7 or ARMv8, add the following configuration:
                doNotStrip "*/arm64-v8a/libucs-credential.so"
                doNotStrip "*/armeabi-v7a/libucs-credential.so"
                // If the CPU architecture is x86, add the following configuration:
                doNotStrip "*/x86/libucs-credential.so"
                doNotStrip "*/x86_64/libucs-credential.so"
            }

            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            packagingOptions  {
                // If the CPU architecture is ARMv7 or ARMv8, add the following configuration:
                doNotStrip "*/arm64-v8a/libucs-credential.so"
                doNotStrip "*/armeabi-v7a/libucs-credential.so"
                // If the CPU architecture is x86, add the following configuration:
                doNotStrip "*/x86/libucs-credential.so"
                doNotStrip "*/x86_64/libucs-credential.so"
            }
        }

    }


        compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
    }
}
dependencies {
    implementation platform('com.google.firebase:firebase-bom:29.0.0')
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.google.android.material:material:1.4.0'
    implementation "com.huawei.agconnect:agconnect-auth:1.6.1.300"
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation platform('com.google.firebase:firebase-bom:29.0.1')
    implementation 'com.google.firebase:firebase-storage'
    implementation 'com.google.firebase:firebase-database:19.7.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.firebase:firebase-auth:21.0.1'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation 'com.huawei.agconnect:agconnect-apms:1.5.2.300'
}
